Fixed the go to the top btn is not visible inder chat with layla btn.

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -984,7 +984,7 @@ button {
 // created a button to go to the top of the page. It is an absolute positioned button
 .go-to-the-top-button {
   position: fixed;
-  bottom: 5rem;
+  bottom: 11rem;
   right: 5rem;
   background-color: var(--clr-primary);
   color: var(--clr-white);
